--- a/ClientWebAPI/ClientWebAPI.Web/Views/Usuarios/CreateCard.cshtml
+++ b/ClientWebAPI/ClientWebAPI.Web/Views/Usuarios/CreateCard.cshtml
@@ -292,7 +292,7 @@
             <div class="table-title">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h2>Edit <b>USUARIOS</b></h2>
+                        <h2>Create <b>Card</b></h2>
                     </div>
                 </div>
             </div>
@@ -301,20 +301,11 @@
                     @using (Html.BeginForm())
                     {
                         @Html.AntiForgeryToken()
-
                     <div class="form-horizontal">
                         <hr />
+
+                        <p></p>
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        @Html.HiddenFor(model => model.Id)
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
                         <div class="form-group">
                             @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -323,6 +314,8 @@
                             </div>
                         </div>
 
+                        <p></p>
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -331,6 +324,28 @@
                             </div>
                         </div>
 
+                        <p></p>
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <p></p>
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <p></p>
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             @Html.LabelFor(model => model.Pan, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -339,6 +354,8 @@
                             </div>
                         </div>
 
+                        <p></p>
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             @Html.LabelFor(model => model.Pin, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -349,16 +366,17 @@
 
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Save" class="btn btn-default" />
+                                <input type="submit" value="Create" class="btn btn-default" />
                             </div>
                         </div>
-                    </div>
-                    }
+                        <hr />
+                        </div>
+                        }
 
-                    <div>
-                        @Html.ActionLink("Back to List", "Index")
+                        <div>
+                            @Html.ActionLink("Back to List", "Index")
+                        </div>
                     </div>
-                </div>
             </div>
             <!-- Edit Modal HTML -->
             <div id="addEmployeeModal" class="modal fade">
@@ -455,3 +473,7 @@
     </div>
 </body>
 </html>
+
+                                		                            
+
+
