--- a/ClientWebAPI/ClientWebAPI.Web/Views/Usuarios/Delete.cshtml
+++ b/ClientWebAPI/ClientWebAPI.Web/Views/Usuarios/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClientWebAPI.Web.Models.User
+﻿@model ClientWebAPI.Web.Models.Card
 
 <!DOCTYPE html>
 <html lang="en">
@@ -307,7 +307,7 @@
                             <h5>Are you sure you want to delete this?</h5>
                             <hr />
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            @Html.HiddenFor(model => model.Token)
+                            @Html.HiddenFor(model => model.Id)
 
                             <div class="form-group">
                                 @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -318,10 +318,10 @@
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Token, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    @Html.EditorFor(model => model.Token, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Token, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
