--- a/ClientWebAPI/ClientWebAPI.Web/Views/Usuarios/Details.cshtml
+++ b/ClientWebAPI/ClientWebAPI.Web/Views/Usuarios/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClientWebAPI.Web.Models.User
+﻿@model ClientWebAPI.Web.Models.Card
 
 <!DOCTYPE html>
 <html lang="en">
@@ -315,10 +315,10 @@
                             </div>
 
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Token, htmlAttributes: new { @class = "control-label col-md-2" })
+                                @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    @Html.EditorFor(model => model.Token, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Token, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <hr />
@@ -326,7 +326,7 @@
                     }
 
                     <div>
-                        @Html.ActionLink("Edit", "Edit", new { id = Model.Token }) |
+                        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
                         @Html.ActionLink("Back to List", "Index")
                     </div>
                 </div>
